[package]
name = "egui-macroquad"
version = "0.16.0"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/optozorax/egui-macroquad"
repository = "https://github.com/optozorax/egui-macroquad"
description = "Bindings between egui and macroquad"
readme = "README.md"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]
egui = "0.28"
# use a fork of egui-miniquad that's been updated to support egui 0.25.0 until https://github.com/not-fl3/egui-miniquad/pull/65 is merged
egui-miniquad = { git = 'https://github.com/not-fl3/egui-miniquad.git', rev="6bad911ae9dbc74324b8a27a4b43ee8d591c3381" }
macroquad = { git = "https://github.com/LLeny/macroquad.git", rev = "9fc8e6ec608b42cd72f88add7ceb751c351743ac" }

[profile.release]
opt-level = 3
